--- a/css/screen.css
+++ b/css/screen.css
@@ -2,13 +2,9 @@
     --color-background: #eee;
 
     --color-main: #009879;
-    --global-label-color: var(--global-color-neutral-xx-dark);
-    --global-color-error: #FF3333;
 
     --element-gap: 48px;
     --text-gap: 16px;
-
-    --label-color: var(--global-label-color);
 }
 
 html {
@@ -74,28 +70,22 @@ select {
     margin-bottom: 48px;
 }
 
-.c-form-field {
-    position: relative;
+.c-header-landing .c-explanation p {
+    font-size: 18px;
+    margin: 8px;
 }
 
-.c-label {
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 1.5;
-    font-size: 16px;
-    color: #4b4c60;
-}
-
-.c-input {
-    width: 100%;
+.c-form-item {
+    width: 85%;
+    font-size: 18px;
+    margin-bottom: 16px;
+    border-radius: 12px;
+    background-color: rgba(192, 192, 192, 0.5);
     outline: none;
-    border-radius: 8px;
-    padding: 16px;
-    border: 2px solid var(--color-main);
-    background-color: #ddd;
+    padding: 12px;
 }
 
-.c-button {
+.c-form-submit {
     background-color: var(--color-main);
     color: #eee;
     border: none;
@@ -105,7 +95,7 @@ select {
     border-radius: 8px;
 }
 
-.c-button:hover {
+.c-form-submit:hover {
     background-color: rgb(0, 177, 141);
     color: #eee;
     border: none;
@@ -113,26 +103,9 @@ select {
     border-radius: 8px;
 }
 
-.c-input:hover {
-    border-color: var(--color-main);
-}
-
-
-.c-label__error-message {
-    font-weight: 600;
-	float: right;
-    display: none;
-    color: var(--global-color-error);
-}
-
-.c-label__error-message.is-visible {
-	display: block;
-}
-
-
-.c-header-landing .c-explanation p {
-    font-size: 18px;
-    margin: 8px;
+.c-form-label {
+    margin-left: 8px;
+    padding-bottom: 8px;
 }
 
 .c-header{
@@ -171,10 +144,6 @@ select {
 
 .c-table-header h2 {
     text-align: center;
-}
-
-.has-error {
-    --label-color: var(--global-color-error);
 }
 
 thead tr {
