--- a/css/screen.css
+++ b/css/screen.css
@@ -83,7 +83,7 @@ select {
     font-size: 14px;
     line-height: 1.5;
     font-size: 16px;
-    color: #4b4c60;
+    color: #5a5a5a;
 }
 
 .c-input {
@@ -114,7 +114,7 @@ select {
 }
 
 .c-input:hover {
-    border-color: var(--color-main);
+    border: var(--color-main) solid 2px;
 }
 
 
@@ -122,6 +122,7 @@ select {
     font-weight: 600;
     display: none;
     color: var(--global-color-error);
+    margin-right: 32px;
 }
 
 .c-label__error-message.is-visible {
@@ -174,6 +175,18 @@ select {
 
 .has-error {
     --label-color: var(--global-color-error);
+}
+
+.has-error label {
+    color: var(--global-color-error);
+}
+
+.has-error input {
+    border-color: var(--global-color-error);
+}
+
+.has-error input:hover {
+    border-color: var(--global-color-error);
 }
 
 thead tr {
